objects/Email_Parsing_Field_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Email_Field__c</fullName>
        <description>Name of the field in the Email</description>
        <inlineHelpText>Name of the field in the Email</inlineHelpText>
        <label>Email Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Field_Type__c</fullName>
        <description>Field Type of the Salesforce Field</description>
        <inlineHelpText>Field Type of the Salesforce Field</inlineHelpText>
        <label>SF Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Field__c</fullName>
        <description>API Name of the Salesforce Field</description>
        <inlineHelpText>API Name of the Salesforce Field</inlineHelpText>
        <label>SF Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Object_Type__c</fullName>
        <description>API Name of the Salesforce objects</description>
        <inlineHelpText>API Name of the Salesforce objects</inlineHelpText>
        <label>SF Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WorkOrder</fullName>
                </value>
                <value>
                    <fullName>CKSW_BASE__Service__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Email Parsing Field Mapping</label>
    <pluralLabel>Email Parsing Field Mappings</pluralLabel>
</CustomObject>